--- a/test/xpower/CMakeLists.txt
+++ b/test/xpower/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(TESTS ntt10_4x_nof3456 ntt5_4x_nof03 ntt5_4x_nof14)
+set(TESTS ntt10_4x_nof3456 ntt10_4x_nof34567 ntt5_4x_nof14 ntt5_4x_nof03 ntt5_4x_nof023)
 
 foreach(X IN LISTS TESTS)
   add_executable("${X}" "${X}.cpp")
