add unit tests framework, move headers around, add test for ntt10_4x_nof*

--- a/test/xpower/CMakeLists.txt
+++ b/test/xpower/CMakeLists.txt
@@ -1,7 +1,7 @@
-set(TESTS ntt10_4x_nof3456 ntt10_4x_nof34567 ntt5_4x_nof14 ntt5_4x_nof03 ntt5_4x_nof023)
+set(TESTS ntt10_4x_nof3456 ntt10_4x_nof34567)
 
 foreach(X IN LISTS TESTS)
-  add_executable("${X}" "${X}.cpp")
-  target_link_libraries("${X}" xpower)
-  target_include_directories("${X}" PRIVATE ../../include/xpower ../../src/xpower)
+  add_executable("${X}_test" "${X}.cpp")
+  target_link_libraries("${X}_test" xpower)
+  target_include_directories("${X}_test" PRIVATE ../../include/xpower ../../include/shared ../../src/xpower ../include)
 endforeach()
