--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,4 +32,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_subdirectory(src)
 add_subdirectory(test)
+add_subdirectory(debug)
 # add_subdirectory(profiling)
