ntt9_2x_h12345678 done, with unit tests

--- a/test/xpower/CMakeLists.txt
+++ b/test/xpower/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(TESTS ntt10_4x_nof3456 ntt10_4x_nof34567)
+set(TESTS ntt10_4x_nof3456 ntt10_4x_nof34567 ntt9_2x_h12345678)
 
 foreach(X IN LISTS TESTS)
   add_executable("${X}_test" "${X}.cpp")
