--- a/src/xpower/CMakeLists.txt
+++ b/src/xpower/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library(xpower OBJECT main_lay1.cpp)
-target_include_directories(xpower PRIVATE ../../include/xpower)
+target_include_directories(xpower PRIVATE ../../include/xpower ../../include/shared)
