improve constant lookup in basemul, add benchmark code for basemul

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,4 +34,4 @@ add_compile_options(-Winline)
 add_subdirectory(src)
 add_subdirectory(test)
 add_subdirectory(debug)
-# add_subdirectory(profiling)
+add_subdirectory(bench)
