--- a/src/xpower/CMakeLists.txt
+++ b/src/xpower/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(xpower OBJECT main_lay1.cpp)
+add_library(xpower OBJECT main_lay1.cpp main_lay2)
 target_include_directories(xpower PRIVATE ../../include/xpower ../../include/shared)
