--- a/test/xpower/CMakeLists.txt
+++ b/test/xpower/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(TESTS ntt10_4x ntt10_4x_nof3456 ntt10_4x_nof34567 ntt10_4x_noh3456 ntt9_2x_h12345678 schoolbook karatsuba radix2 karatsuba_kara radix2_kara main_lay1_fwd_extract main_lay2_fwd_inplace mainmul)
+set(TESTS ntt10_4x ntt10_4x_nof3456 ntt10_4x_nof34567 ntt10_4x_noh3456 ntt9_2x_h12345678 karatsuba radix2 main_lay1_fwd_extract main_lay2_fwd_inplace mainmul lowmul)
 
 foreach(X IN LISTS TESTS)
   add_executable("${X}_test" "${X}.cpp")
