--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_subdirectory(xpower)
+add_library(xpower OBJECT main_lay1.cpp main_lay2.cpp basemul.cpp mainmul.cpp lowmul.cpp rqmul.cpp)
+target_include_directories(xpower PRIVATE ../include/xpower ../include/shared)
